# ConsoleGame

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  ConsoleGame.sln  README.md  log_parse_clor_dtor_count.txt  sonar-project.properties
.github/workflows/: build.yml
Code/: CMakeLists.txt
Code/SWF/: CMakeLists.txt  SWF.h  SWF_Events.cpp  SWF_Main.cpp  SWF_ParmList.cpp  SWF_ParmList.h  SWF_PlaceObject.cpp  SWF_Render.cpp  SWF_ScriptFunction.h  SWF_ScriptObject.cpp  SWF_ScriptObject.h  SWF_ScriptVar.cpp  SWF_ScriptVar.h  SWF_SpriteInstance.cpp  SWF_SpriteInstance.h  SWF_TextInstance.cpp  SWF_TextInstance.h  SWF_Types.h
Code/cm/: CMakeLists.txt  CollisionModel.cpp  CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_trace.cpp  CollisionModel_translate.cpp
Code/d3xp/: AFEntity.cpp  AFEntity.h  Actor.cpp  Actor.h  CMakeLists.txt  Entity.cpp  Entity.h  FireBall.cpp  FireBall.h  Game.h  GameEdit.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Misc.cpp  Misc.h  Player.cpp  Player.h  PlayerBomber.cpp  PlayerBomber.h  PlayerChain.cpp  PlayerChain.h  PlayerView.cpp  PlayerView.h  Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.h  WorldSpawn.cpp  WorldSpawn.h
Code/d3xp/ai/: AI.cpp  AI.h
Code/d3xp/anim/: Anim.cpp  Anim.h  Anim_Blend.cpp
Code/d3xp/gamesys/: Class.cpp  Class.h  Event.cpp  Event.h  SysCmds.cpp  SysCvar.cpp  SysCvar.h
Code/d3xp/menus/: MenuHandler.cpp  MenuHandler.h  MenuHandler_Shell.cpp  MenuScreen.cpp  MenuScreen.h  MenuScreen_Shell_GameLobby.cpp  MenuScreen_Shell_NewGame.cpp  MenuScreen_Shell_PartyLobby.cpp  MenuScreen_Shell_Pause.cpp  MenuScreen_Shell_PressStart.cpp  MenuScreen_Shell_Root.cpp  MenuScreen_Shell_Singleplayer.cpp  MenuWidget.cpp  MenuWidget.h  MenuWidget_Button.cpp  MenuWidget_CommandBar.cpp  MenuWidget_DynamicList.cpp  MenuWidget_List.cpp  MenuWidget_LobbyList.cpp  MenuWidget_MenuBar.cpp  MenuWidget_NavButton.cpp
Code/d3xp/physics/: Clip.cpp  Clip.h  Physics.cpp  Physics.h  Physics_AF.cpp  Physics_AF.h  Physics_Actor.cpp  Physics_Actor.h  Physics_Base.cpp  Physics_Base.h  Physics_Player.cpp  Physics_Player.h  Physics_PlayerChain.cpp  Physics_PlayerChain.h  Physics_PlayerMy.cpp  Physics_PlayerMy.h  Physics_RigidBody.cpp  Physics_RigidBody.h  Physics_Static.cpp  Physics_Static.h
Code/framework/: CMakeLists.txt  CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  CmdSystem.h  Common.cpp  Common.h  Common_load.cpp  Common_local.h  Common_menu.cpp  Common_network.cpp  Common_printf.cpp  Console.cpp  Console.h  DeclEntityDef.cpp  DeclEntityDef.h  DeclManager.cpp  DeclManager.h  DeclParticle.cpp  DeclParticle.h  EditField.cpp  EditField.h  EventLoop.cpp  EventLoop.h  File.cpp  File.h  FileSystem.cpp  FileSystem.h  KeyInput.cpp  KeyInput.h  PlayerProfile.cpp  PlayerProfile.h  UsercmdGen.cpp  UsercmdGen.h  common_frame.cpp  precompiled.cpp
Code/idlib/: BitMsg.cpp  BitMsg.h  CMakeLists.txt  CmdArgs.cpp  CmdArgs.h  DataQueue.h  Dict.cpp  Dict.h  Heap.h  Lexer.cpp  Lexer.h  Lib.cpp  Lib.h  MapFile.cpp  MapFile.h  Str.cpp  Str.h  Thread.cpp  Thread.h  Token.cpp  Token.h  precompiled.cpp  precompiled.h
Code/idlib/bv/: Bounds.cpp  Bounds.h
Code/idlib/containers/: Hierarchy.h  LinkList.h
Code/idlib/geometry/: TraceModel.h
Code/idlib/math/: Math.cpp  Math.h  Ode.cpp  Ode.h  Vector2.cpp  Vector2.h
Code/idlib/sys/: proflie.h  sys_assert.cpp  sys_assert.h  sys_defines.h  sys_filesystem.h  sys_includes.h  sys_types.h
Code/renderer/: CMakeLists.txt  Image.h  ImageManager.cpp  Image_intrinsic.cpp  Image_load.cpp  Material.cpp  Material.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Model_bmp.cpp  Model_bmp.h  Model_local.h  Model_mesh.cpp  Model_prt.cpp  RenderEntity.cpp  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderWorld.cpp  RenderWorld.h  RenderWorld_defs.cpp  RenderWorld_load.cpp  RenderWorld_local.h  RenderWorld_portals.cpp  Screen.cpp  Screen.h  tr_backend_draw.cpp  tr_backend_render_tools.cpp  tr_frontend_addmodels.cpp  tr_frontend_main.cpp  tr_local.h
Code/sys/: CMakeLists.txt  PacketProcessor.cpp  PacketProcessor.h  Snapshot.cpp  Snapshot.h  SnapshotProcessor.cpp  SnapshotProcessor.h  sys_lobby.cpp  sys_lobby.h  sys_lobby_backend.h  sys_lobby_backend_direct.cpp  sys_lobby_backend_direct.h  sys_lobby_snapshot.cpp  sys_lobby_users.cpp  sys_net.cpp  sys_public.h  sys_session.h  sys_session_callbacks.cpp  sys_session_local.cpp  sys_session_local.h  sys_shared.cpp
Code/sys/linux/: linux_console_screen.cpp  linux_console_screen.h  linux_main.cpp
Code/sys/win32/: win_console_screen.cpp  win_console_screen.h  win_cpu.cpp  win_input.cpp  win_local.h  win_main.cpp  win_net.cpp  win_session_local.cpp  win_shared.cpp
ConsoleGame/: AI.cpp  AI.h  AIEntity.cpp  AIEntity.h  Actor.cpp  Actor.h  Class.cpp  Class.h  Common.cpp  Common.h  Common_load.cpp  Common_local.h  ConsoleGame.cpp  ConsoleGame.vcxproj  ConsoleGame.vcxproj.filters  Dict.cpp  Dict.h  Entity.cpp  Entity.h  EntityBase.cpp  EntityBase.h  Game.cpp  Game.h  GameEdit.cpp  Game_local.cpp  Game_local.h  LinkList.h  MEM-LOG.TXT  Misc.cpp  Misc.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Model_local.cpp  Model_local.h  Physics.cpp  Physics.h  PhysicsStatic.cpp  PhysicsStatic.h  (+42 more)
ConsoleGame/SWF/: SWF.h  SWF_Events.cpp  SWF_Main.cpp  SWF_ParmList.cpp  SWF_PlaceObject.cpp  SWF_Render.cpp  SWF_ScriptFunction.h  SWF_ScriptObject.cpp  SWF_ScriptObject.h  SWF_ScriptVar.cpp  SWF_ScriptVar.h  SWF_SpriteInstance.cpp  SWF_SpriteInstance.h  SWF_TextInstance.cpp  SWF_TextInstance.h  SWF_Types.h
ConsoleGame/ai/: AI.cpp  AI.h
ConsoleGame/base/: autoexec.cfg  default.cfg  log_parse_clor_dtor_count.sh
ConsoleGame/cm/: CollisionModel.cpp  CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_trace.cpp  (+1 more)
Proto/: Address.proto  ConnectionRequest.proto  MatchParams.proto  ReliableHello.proto
base/: autoexec.cfg  default.cfg  default_.cfg
base/def/: def.def  (+1 more)
(+263 files in other folders)
